Fix allocation_find_by_ptr & unchecked_free
If the user called unchecked_free before any other allocation function,
the sys_* functions were not loaded yet, causing a segfault.
The allocation_find_by_ptr has an incomplete reverse loop that could
possibly wrap around to 18 quintillion if the allocs.size was 0.

--- a/readme
+++ b/readme
@@ -28,3 +28,9 @@ Could output:
        4 | {
        5 |     void *p = malloc(24); // => 0x603000000040
        6 | }
+
+
+If you called free() with a pointer from strdup or any other function that
+allocates memory and is not compiled with mleak, you will get an error about
+an unrecognized pointer. In order to disable this you may use unchecked_free()
+instead of the regular free().
