Place strdup() behind feature test
Because strdup() is not in the standard C library, it must be put behind
a feature test macro (_XOPEN_SOURCE >= 500) so dlsym() later can be sure
to find strdup.

--- a/readme
+++ b/readme
@@ -1,8 +1,8 @@
 mleak
 -----
 
-Minimal library for catching memory leaks, double-frees, invalid pointers passed
-to free & realloc, counting allocations and used heap memory.
+Library for catching memory leaks, double-frees, invalid pointers passed to free
+& realloc, counting allocations and used heap memory.
 
 If you're profiling allocations, you may use `-DMLEAK_TRACK` to print the amount
 of calls to the allocation functions, and the amount of total bytes allocated.
