Remove buildfile and keep the original install
Because this has to be built as a library, `build` cannot be used yet
as it does not support compiling to ar -rcs.

--- a/install
+++ b/install
@@ -6,5 +6,5 @@ $CC -c -fPIE -o mleak.o mleak.c
 ar -rcs libmleak.a mleak.o
 rm mleak.o
 
-mv libmleak.a /usr/lib
-cp mleak.h /usr/include
+mv -f libmleak.a /usr/lib
+cp -f mleak.h /usr/include
