--- a/readme
+++ b/readme
@@ -9,6 +9,16 @@ code. Then add the following line to your buildfile:
     libs mleak
 
 
+This library is not designed to be a replacement for the address sanitizer
+nor Valgrind, or any similar tools. The goal is to provide a very simple to
+use interface for users who prefer using lightweight tools.
+
+The main selling point is the simple to understand error messages, which
+automatically show where this problem happened. For example, leaking memory
+will show you where it was allocated and a pointer for reference, like seen
+below.
+
+
 Example
 -------
 
