Replace #define block with an enum
The integers get incremented by 1 anyway, so using a enum is the
cleaner way.

--- a/install
+++ b/install
@@ -2,7 +2,7 @@
 
 CC=clang
 [ -z "$(type $CC 2> /dev/null)" ] && CC=c99
-$CC -c -fPIE -o mleak.o mleak.c
+$CC -c -Wall -Wextra -fPIE -o mleak.o mleak.c
 ar -rcs libmleak.a mleak.o
 rm mleak.o
 
